// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json body > array input > requires at least one source 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "0: At least one source is required.",
  "statusCode": 400,
}
`;

exports[`json body > object input > errors correctly on an empty object 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "At least one source is required.",
  "statusCode": 400,
}
`;

exports[`json body > object input > gET fails with json body 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "source: Invalid source, id: Invalid ID",
  "statusCode": 400,
}
`;
